Bug 394828 - Problem in description of 8 bit integer
Summary: Problem in description of 8 bit integer
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Documentation (other bugs)
Version First Reported In: unspecified
Platform: Microsoft Windows Microsoft Windows
: NOR task
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-29 12:40 UTC by Jan Bernard
Modified: 2018-05-30 07:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Bernard 2018-05-29 12:40:53 UTC
Hi,
in configure krita/ color management/ soft proofing/ color space browser
There is this written

"8 bit integer: The default amount of colors per channel. Each channel will have 256 values available, leading to a total amount of 256*amount of channels. Recommended to use for images intended for the web, or otherwise simple images."

Shouldn't there be 256^amount of channels. There is * instead of ^.
But I could be wrong. If I'am then sorry for disturbing!

You are doing great job. Thank you very much.
Comment 1 Halla Rempt 2018-05-29 12:42:44 UTC
The * is correct -- but 'amount' is the wrong word here, it should be number.
Comment 2 Halla Rempt 2018-05-29 12:44:30 UTC
Git commit 97c1c1bf9fa433e5fd97c89dc522ac82a64a9005 by Boudewijn Rempt.
Committed on 29/05/2018 at 12:43.
Pushed by rempt into branch 'master'.

Improve the text describing 8 bits/integer channel depth

M  +2    -2    libs/ui/widgets/kis_advanced_color_space_selector.cc

https://commits.kde.org/krita/97c1c1bf9fa433e5fd97c89dc522ac82a64a9005
Comment 3 Halla Rempt 2018-05-29 12:45:26 UTC
Er, no of course not... It's too warm to think straight, and you were right...
Comment 4 Halla Rempt 2018-05-29 12:46:53 UTC
Git commit 96bf129c5f7ba65959d48b5339a7a377b8ce2af4 by Boudewijn Rempt.
Committed on 29/05/2018 at 12:46.
Pushed by rempt into branch 'master'.

Fix formulation for 8 bit channel depth again

M  +1    -1    libs/ui/widgets/kis_advanced_color_space_selector.cc

https://commits.kde.org/krita/96bf129c5f7ba65959d48b5339a7a377b8ce2af4
Comment 5 Halla Rempt 2018-05-30 07:53:33 UTC
Git commit 55e4c23a59c9a1095536e4b43ac7b9f3896e49cb by Boudewijn Rempt.
Committed on 30/05/2018 at 07:40.
Pushed by rempt into branch 'krita/4.0'.

Improve the text describing 8 bits/integer channel depth
(cherry picked from commit 97c1c1bf9fa433e5fd97c89dc522ac82a64a9005)

M  +2    -2    libs/ui/widgets/kis_advanced_color_space_selector.cc

https://commits.kde.org/krita/55e4c23a59c9a1095536e4b43ac7b9f3896e49cb
Comment 6 Halla Rempt 2018-05-30 07:53:33 UTC
Git commit 7378b41182c7dfebdbcd8db1f3ddc4e2fec1c540 by Boudewijn Rempt.
Committed on 30/05/2018 at 07:41.
Pushed by rempt into branch 'krita/4.0'.

Fix formulation for 8 bit channel depth again
(cherry picked from commit 96bf129c5f7ba65959d48b5339a7a377b8ce2af4)

M  +1    -1    libs/ui/widgets/kis_advanced_color_space_selector.cc

https://commits.kde.org/krita/7378b41182c7dfebdbcd8db1f3ddc4e2fec1c540