Fix formulation for 8 bit channel depth again

BUG:394828