libs/ui/widgets/kis_advanced_color_space_selector.cc
@@ -421,7 +421,7 @@ void KisAdvancedColorSpaceSelector::fillDescription()
     if (currentDepthStr == "U8") {
         d->colorSpaceSelector->textProfileDescription->append("<p>"+i18nc("When the selected Bitdepth is 8",
                                                                     "<b>8 bit integer</b>: The default number of colors per channel. Each channel will have 256 values available, "
-                                                                    "leading to a total amount of colors of 256 times the number of channels. Recommended to use for images intended for the web, "
+                                                                    "leading to a total amount of colors of 256 to the power of the number of channels. Recommended to use for images intended for the web, "
                                                                     "or otherwise simple images.")+"</p>");
     }
     else if (currentDepthStr == "U16") {
